update homepage message

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         <video class="hero-video" src="includes/videos/peoples.mp4" muted loop autoplay></video>
           <div class="overlay"></div>
             <div class="px-4 py-5 my-5 text-center">
-              <h1 class="hero-text">Connecting People To Christ</h1>
+              <h1 class="hero-text">“Therefore welcome one another as Christ has welcomed you, for the glory of God.”</h1>
+              <p class="sub-hero-text">Romans 15:7</p>
             </div>
       </section>
 
@@ -164,6 +165,7 @@
     delay: 400
   });
   ScrollReveal().reveal('.hero-text', { delay: 500, origin: 'bottom' });
+  ScrollReveal().reveal('.sub-hero-text', { delay: 700, origin: 'bottom' });
   ScrollReveal().reveal('.intro-text', { delay: 500, origin: 'left' });
   ScrollReveal().reveal('.intro-subtext', { delay: 500, origin: 'left' });
   ScrollReveal().reveal('.app', { delay: 500, origin: 'bottom' }); 
