--- a/mission.html
+++ b/mission.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="includes/css/bootstrap.css">
     <link rel="stylesheet" href="includes/mystyle.css">
     <link rel="stylesheet" href="includes/navbar.css">
     <link rel="stylesheet" href="includes/ourmission.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/font-awesome-line-awesome/css/all.min.css">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <script src="https://unpkg.com/scrollreveal"></script>
@@ -60,7 +61,7 @@
         <div class="container">
             <div class="row align items center justify-content-between">
                 <div class="col-md p-5">
-                    <h2 class="aboutyo" style="padding-bottom: 1rem;">About YourOne</h2>
+                    <h2 class="aboutyo" style="padding-top: 1.5em; padding-bottom: 1rem;">About YourOne</h2>
                     <p class="topdesc" style="font-size:20px;font-weight: 300;padding-bottom: 4;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas 
                     convallis justo ut elit finibus convallis. Maecenas accumsan imperdiet.</p>
                     <div class="uronemid">
@@ -74,7 +75,7 @@
                 </div>
                 <div class="col-md p-5" id="imgup">
                   <div class="picdesc">
-                    <img class="img-fluid abouturone" src="includes/img/aboutyourone.jpg" alt="">
+                    <img class="img-fluid abouturone" src="includes/images/yourone_sample_app.jpg" alt="">
                   </div>
                 </div>
             </div>
