--- a/music.html
+++ b/music.html
@@ -56,7 +56,7 @@
         <video class="app-hero-video" src="includes/videos/music.mp4" muted loop autoplay></video>
           <div class="overlay"></div>
             <div class="px-4 py-5 my-5 text-center">
-              <h1 class="services-hero-text">Music</h1>
+              <h1 class="music-hero-text">Music</h1>
             </div>
       </section>
 
@@ -65,13 +65,22 @@
         <div class="container">
           <div class="row align items center justify-content-between">
             <div class="col-md p-4">
-              <h2 class="fw-bold intro-text pb-4">Try our Music</h2>
+              <h2 class="fw-bold intro-text pb-4 pt-3">Try Our Music</h2>
               <p class="lead pb-4 intro-subtext">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint assumenda aut vero ratione rem omnis.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam, eos quidem porro harum excepturi assumenda?
               </p>
               <p class="lead pb-4 intro-subtext">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex dolores amet, eius quaerat ipsam, optio fugiat explicabo fugit iusto assumenda necessitatibus dolorum ipsum velit quibusdam?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. At fugiat itaque nihil? Numquam ullam quaerat iste animi cumque, harum temporibus laboriosam rem, blanditiis, saepe culpa.
               </p>
+              <a href="index.html" class="btn app">
+                <img src="includes/images/apple_store_badge.bmp" class="store-badge">
+              </a>
+              <a href="index.html" class="btn app">
+                <img src="includes/images/google_play_badge.png" class="store-badge">
+              </a>
+            </div>
+            <div class="col-md">
+              <img src="includes/images/yourone_sample_app.jpg" class="img-fluid yourone-sample" alt="">
             </div>
           </div>
         </div>
