--- a/mission.html
+++ b/mission.html
@@ -38,8 +38,15 @@
               <li class="nav-item link">
                 <a href="mission.html" class="nav-link active">Our Mission</a>
               </li>
-              <li class="nav-item link">
-                <a href="services.html" class="nav-link">Services</a>
+              <li class="nav-item link dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Services
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <li><a class="dropdown-item" href="services.html#servicemusic">Music</a></li>
+                  <li><a class="dropdown-item" href="services.html#servicepreaches">Preaches</a></li>
+                  <li><a class="dropdown-item" href="services.html#serviceverses">Bible Verse</a></li>
+                </ul>
               </li>
               <li class="nav-item link">
                 <a href="contact.html" class="nav-link">Contact Us</a>
