--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="includes/mystyle.css">
     <link rel="stylesheet" href="includes/navbar.css">
     <link rel="stylesheet" href="includes/contactus.css">
-
      <!-- Bootstrap CSS -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
      <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/font-awesome-line-awesome/css/all.min.css">
@@ -41,8 +40,15 @@
               <li class="nav-item link">
                 <a href="mission.html" class="nav-link">Our Mission</a>
               </li>
-              <li class="nav-item link">
-                <a href="services.html" class="nav-link">Services</a>
+              <li class="nav-item link dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Services
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <li><a class="dropdown-item" href="services.html#servicemusic">Music</a></li>
+                  <li><a class="dropdown-item" href="services.html#servicepreaches">Preaches</a></li>
+                  <li><a class="dropdown-item" href="services.html#serviceverses">Bible Verse</a></li>
+                </ul>
               </li>
               <li class="nav-item link">
                 <a href="contact.html" class="nav-link active">Contact Us</a>
