add bible verse background image

--- a/services.html
+++ b/services.html
@@ -34,19 +34,22 @@
         <div class="collapse navbar-collapse" id="navMenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item link">
+              <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item link">
                 <a href="get_the_app.html" class="nav-link">Get The App</a>
               </li>
               <li class="nav-item link">
                 <a href="mission.html" class="nav-link">Our Mission</a>
               </li>
               <li class="nav-item link dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Services
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="services.html#servicemusic">Music</a></li>
-                  <li><a class="dropdown-item" href="services.html#servicepreaches">Preaches</a></li>
-                  <li><a class="dropdown-item" href="services.html#serviceverses">Bible Verse</a></li>
+                  <li><a class="dropdown-item" href="music.html">Music</a></li>
+                  <li><a class="dropdown-item" href="preaches.html">Preaches</a></li>
+                  <li><a class="dropdown-item" href="verses.html">Bible Verse</a></li>
                 </ul>
               </li>
               <li class="nav-item link">
@@ -103,7 +106,7 @@
               <p class="lead pb-4 intro-subtext">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex dolores amet, eius quaerat ipsam, optio fugiat explicabo fugit iusto assumenda necessitatibus dolorum ipsum velit quibusdam?
               </p>
-              <a href="index.html" class="btn app">
+              <a href="preaches.html" class="btn app">
                 <button type="submit" class="btn" style="background-color: #fff; color:#000; padding: 0.8em; border-radius: 15px;">Try Now <i class="fas fa-chevron-right"></i></button>
               </a>
             </div>
@@ -130,7 +133,7 @@
               <p class="lead pb-4 intro-subtext">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex dolores amet, eius quaerat ipsam, optio fugiat explicabo fugit iusto assumenda necessitatibus dolorum ipsum velit quibusdam?
               </p>
-              <a href="index.html" class="btn app">
+              <a href="verses.html" class="btn app">
                 <button type="submit" class="btn" style="background-color: #7537B3; color:#fff; padding: 0.8em; border-radius: 15px;">Try Now <i class="fas fa-chevron-right"></i></button>
               </a>
             </div>
