--- a/music.html
+++ b/music.html
@@ -34,19 +34,22 @@
         <div class="collapse navbar-collapse" id="navMenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item link">
+              <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item link">
                 <a href="get_the_app.html" class="nav-link">Get The App</a>
               </li>
               <li class="nav-item link">
                 <a href="mission.html" class="nav-link">Our Mission</a>
               </li>
               <li class="nav-item link dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Services
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="services.html#servicemusic">Music</a></li>
-                  <li><a class="dropdown-item" href="services.html#servicepreaches">Preaches</a></li>
-                  <li><a class="dropdown-item" href="services.html#serviceverses">Bible Verse</a></li>
+                  <li><a class="dropdown-item active" href="music.html">Music</a></li>
+                  <li><a class="dropdown-item" href="preaches.html">Preaches</a></li>
+                  <li><a class="dropdown-item" href="verses.html">Bible Verse</a></li>
                 </ul>
               </li>
               <li class="nav-item link">
@@ -72,7 +75,7 @@
         <div class="container">
           <div class="row align items center justify-content-between">
             <div class="col-md p-4">
-              <h2 class="fw-bold intro-text pb-4 pt-3">Try Our Music</h2>
+              <h2 class="fw-bold intro-text pb-4 pt-3">Listen To Music</h2>
               <p class="lead pb-4 intro-subtext">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam, eos quidem porro harum excepturi assumenda?
               </p>
