--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,9 @@
         <div class="collapse navbar-collapse" id="navMenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item link">
+              <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item link">
                 <a href="get_the_app.html" class="nav-link">Get The App</a>
               </li>
               <li class="nav-item link">
@@ -45,9 +48,9 @@
                   Services
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="services.html#servicemusic">Music</a></li>
-                  <li><a class="dropdown-item" href="services.html#servicepreaches">Preaches</a></li>
-                  <li><a class="dropdown-item" href="services.html#serviceverses">Bible Verse</a></li>
+                  <li><a class="dropdown-item" href="music.html">Music</a></li>
+                  <li><a class="dropdown-item" href="preaches.html">Preaches</a></li>
+                  <li><a class="dropdown-item" href="verses.html">Bible Verse</a></li>
                 </ul>
               </li>
               <li class="nav-item link">
