--- a/mission.html
+++ b/mission.html
@@ -46,7 +46,7 @@
                   Services
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="musics.html">Music</a></li>
+                  <li><a class="dropdown-item" href="music.html">Music</a></li>
                   <li><a class="dropdown-item" href="preaches.html">Preaches</a></li>
                   <li><a class="dropdown-item" href="verses.html">Bible Verse</a></li>
                 </ul>
