--- a/verses.html
+++ b/verses.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="navMenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item link">
-                <a href="index.html" class="nav-link">Home</a>
+                <a href="index" class="nav-link">Home</a>
               </li>
             <li class="nav-item link">
                 <a href="get_the_app.html" class="nav-link">Get The App</a>
