--- a/preaches.html
+++ b/preaches.html
@@ -103,29 +103,29 @@
             
             <div class="col-md pb-5">
               <div class="featured">
-                <img src="/includes/images/preach.jpg" class="img-fluid preaches-feature">
-                <i class="fa-solid fa-play fa-2x" style="color: #7537B3; font-size: 3em;" onclick="playVideo('/includes/videos/missions.mp4')"></i>
+                <img src="/includes/images/preach.jpg" class="img-fluid preaches-feature">           
+                <i class="fa-solid fa-play fa-2x" style="font-size: 3em;" onclick="playVideo('/includes/videos/missions.mp4')"></i>
               </div>
             </div>
             <div class="col-md" style="padding-top: 2.6em;">
               <div class="small-img-row">
                <div class="small-img">
                  <img src="/includes/images/preach-1.jpg" class="img-fluid preaches-small-featured" alt="">
-                 <i class="fa-solid fa-play" style="color: #7537B3; font-size: 1.5em;" onclick="playVideo('/includes/videos/missions.mp4')"></i>
+                 <i class="fa-solid fa-play" style="font-size: 1.5em;" onclick="playVideo('/includes/videos/missions.mp4')"></i>
                </div>
                <p style="color: black; padding-right: 1em;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, amet!</p>
               </div>
               <div class="small-img-row">
                <div class="small-img">
                  <img src="/includes/images/preach-2.jpg" class="img-fluid preaches-small-featured" alt="">
-                 <i class="fa-solid fa-play" style="color: #7537B3; font-size: 1.5em;" onclick="playVideo('/includes/videos/missions.mp4')"></i>
+                 <i class="fa-solid fa-play" style="font-size: 1.5em;" onclick="playVideo('/includes/videos/missions.mp4')"></i>
                </div>
                <p style="color: black; padding-right: 1em;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, amet!</p>
               </div>
               <div class="small-img-row">
                <div class="small-img">
                  <img src="/includes/images/preach-3.jpg" class="img-fluid preaches-small-featured" alt="">
-                 <i class="fa-solid fa-play" style="color: #7537B3; font-size: 1.5em;" onclick="playVideo('/includes/videos/missions.mp4')"></i>
+                 <i class="fa-solid fa-play" style="font-size: 1.5em;" onclick="playVideo('/includes/videos/missions.mp4')"></i>
                </div>
                <p style="color: black; padding-right: 1em;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, amet!</p>
               </div>
